# shocc

./: CMakeLists.txt  README.md  setup.py
src/: shocc.cpp  shocc.cu  standard_transforms.cu  standard_transforms.cuh  wigner.cu  wigner.cuh
